# Analysing-the-sheep-behaviour

./: README.md
Analysing the sheep behaviour/: CMakeLists.txt  test_gnuplot_plot_function.txt
Analysing the sheep behaviour/headers/: calculator.h  config.h  coordinate.h  movement.h  parser.h
Analysing the sheep behaviour/sources/: calculator.c  coordinate.c  main.c  movement.c  parser.c
